<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.silhouette.homeapp.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center_vertical"
        android:id="@+id/RG">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/cl"
            android:textSize="18dp"
            android:textColor="#fff"
            android:background="@drawable/backlog_radio_background"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btn1"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/em"
            android:textSize="18dp"
            android:textColor="#fff"
            android:background="@drawable/backlog_radio_background"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btn2"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/timer"
            android:textSize="18dp"
            android:textColor="#fff"
            android:background="@drawable/backlog_radio_background"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btn3"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/his"
            android:textSize="18dp"
            android:textColor="#fff"
            android:background="@drawable/backlog_radio_background"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btn4"/>
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vp"/>

</LinearLayout>
