<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rg1">


    <Button
        android:id="@+id/monthBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="四月"
        android:textColor="#fff"
        android:textSize="17sp"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btnstyle"/>

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/monthBtn"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginTop="13dp"
        android:layout_toLeftOf="@+id/monthBtn"
        android:layout_toStartOf="@+id/monthBtn"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="用电量情况" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/max"
        android:layout_below="@+id/monthBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="25dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/min" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/month"
        android:layout_alignRight="@+id/month"
        android:layout_alignTop="@+id/textView5"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="4月15日" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignTop="@+id/textView6"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="4月18日" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/monthBtn"
        android:layout_alignStart="@+id/monthBtn"
        android:layout_alignTop="@+id/textView7"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="4.5度" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignTop="@+id/textView8"
        android:text="2.3度" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/echart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="250dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/pic"
        android:textColor="#fff"
        android:textSize="18sp"/>
</RelativeLayout>